fix: fix z-index overlay circles

--- a/src/styles/blocks/_overlay.scss
+++ b/src/styles/blocks/_overlay.scss
@@ -47,6 +47,7 @@
   }
 
   &__circle {
+    z-index: 3;
     position: fixed;
     bottom: -50%;
     right: -50%;
